# Pathfinders-visualizer

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: AppState.cpp  AppState.h  GridView.cpp  GridView.h  LaunchDialog.cpp  LaunchDialog.h  LaunchOptions.h  MainWindow.cpp  MainWindow.h  VersusView.cpp  VersusView.h  main.cpp
core/: CMakeLists.txt
core/include/pathcore/: AStar.h  Dijkstra.h  Grid.h  ISearch.h  MapIO.h  NodeState.h  SearchBase.h  SearchConfig.h  SearchSnapshot.h  SearchStatus.h  Types.h  Version.h
core/src/: AStar.cpp  Dijkstra.cpp  Grid.cpp  MapIO.cpp  Version.cpp  core_smoke.cpp
maps/: mapa1.pvz
